--- a/whiteboard-app/package.json
+++ b/whiteboard-app/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
@@ -17,7 +16,6 @@
     "mongojs": "^1.3.0",
     "morgan": "^1.6.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.6",
-    "socket.io-stream": "^0.8.0"
+    "socket.io": "^1.3.6"
   }
 }
