--- a/whiteboard-app/package.json
+++ b/whiteboard-app/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.6.1",
     "nodemon": "^1.4.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "sync": "^0.2.5"
   }
 }
